<resources>
    <string name="app_name">Lab2Activities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="username">Nombre de usuario</string>
    <string name="age">Edad</string>
    <string name="login">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_add_edit_user">AddEditUserActivity</string>
    <string name="field_error">Ingresa un valor</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="linkLogin">¿Ya eres miembro? Logueate!!</string>
    <string name="addImage">Añadir avatar</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_home">HomeActivity</string>

    <!-- Events -->
    <string name="nameEvent">Nombre</string>
    <string name="personInCharge">Responsable</string>
    <string name="dateEvent">Fecha</string>
    <string name="locationEvent">Ubicación</string>
    <string name="descriptionEvent">Descripción</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="string_nombre_lab">Segundo Laboratorio de Computacion movil</string>
    <string name="string_realizado_por">Realizado por</string>
    <string name="jonnatan_rios">Jonnatan Rios</string>
    <string name="juan_restrepo">Juan Restrepo</string>
    <string name="docente_encargado">Docente encargado</string>
    <string name="sebastian">Sebastian</string>
    <string name="guardar">Guardar</string>
</resources>
