<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/avatar"
        android:paddingBottom="15dp"/>


        <TextView
            android:id="@+id/datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_nombre_lab"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/realizado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datos"
            android:text="@string/string_realizado_por"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/realizado"
            android:elegantTextHeight="false"
            android:text="@string/jonnatan_rios"

            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:text="@string/juan_restrepo"
            android:paddingBottom="15dp"
            />

        <TextView
            android:id="@+id/docente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:text="@string/docente_encargado"
            android:textStyle="bold"
            android:textSize="15dp"
             />

        <TextView
            android:id="@+id/profesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/docente"
            android:elegantTextHeight="false"
            android:text="@string/sebastian"
             />



</LinearLayout>